tests/borrowc-test/test_out/simple-moves.txt
error: move out of already moved value
 --> simple-moves/root.ctl:8:10
  |
8 |     drop(a)
  |          - info: previous move of value
9 |     drop(a)
  |          ^ here
  |
  = note: you can disable move semantics with '#[no_moves]' function attribute

error: move out of already moved value
  --> simple-moves/root.ctl:15:14
   |
15 |         drop(a)
   |              - info: previous move of value
16 |     } 
17 |     drop(a)
   |          ^ here
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute

error: move out of already moved value
  --> simple-moves/root.ctl:83:9
   |
83 |         e {
   |         - info: previous move of value
84 |         }
85 |     }
86 |     drop(e)
   |          ^ here
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute

